@@ -82,6 +82,9 @@
                         <version>0.0.8</version>
                         <configuration>
                             <mainClass>com.aoe4.randomizer.desktop.DesktopLauncher</mainClass>
+                            <options>
+                                <option>--add-exports=javafx.web/com.sun.javafx.webkit=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </plugin>
                 </plugins>
